--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,23 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Virtual Pet</title>
-		<style>
 
-		</style>
-		<script>
-			function initialize() {
-				
-			}
-		</script>
-	</head>
-	<body onload="initialize();">
-		
-	</body>
+<head>
+	<title>Virtual Pet</title>
+	<style>
+		body {
+			background-color: #FFCA28;
+			font-family: Tw Cen MT;
+		}
+	</style>
+	<link href="client/assets/css/cards.css" rel="stylesheet" />
+</head>
+
+<body>
+	<span class="card">1111111111111111111111111111111111111111111111111</span>
+	<span class="card">2</span>
+	<span class="card">3</span>
+	<span class="card">4</span>
+	<span class="card">5</span>
+</body>
+
 </html>
