sample card contents

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,35 @@
 
 <body>
 	<span class="card">1111111111111111111111111111111111111111111111111</span>
-	<span class="card">2</span>
+	<span class="card">
+		<span class="pet-name">Pet name</span><br />
+		<span class="pet-type">Pet type</span><br />
+		<img class="pet-image" /><br />
+
+		Health: <span class="pet-stat-number">75</span>
+		<progress class="pet-stat-bar" value="75" max="100"></progress>
+		<br />
+
+		Spirit: <span class="pet-stat-number">75</span>
+		<progress class="pet-stat-bar" value="75" max="100"></progress>
+		<br />
+
+		Hunger: <span class="pet-stat-number">75</span>
+		<progress class="pet-stat-bar" value="75" max="100"></progress>
+		<br />
+
+		Fatigue: <span class="pet-stat-number">75</span>
+		<progress class="pet-stat-bar" value="75" max="100"></progress>
+		<br />
+
+		Age: <span class="pet-stat-number">75</span>
+		<progress class="pet-stat-bar" value="75" max="100"></progress>
+		<br /><br />
+
+		<button class="pet-action-button">Feed</button>
+		<button class="pet-action-button">Play</button>
+		<button class="pet-action-button">Sleep</button>
+	</span>
 	<span class="card">3</span>
 	<span class="card">4</span>
 	<span class="card">5</span>
