card layout tweaks

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 		}
 	</style>
 	<link href="client/assets/css/cards.css" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, height=device-height" />
 </head>
 
 <body>
@@ -31,15 +32,15 @@
 		<br />
 
 		Hunger: <span class="pet-stat-number">50</span>
-		<meter class="pet-stat-bar" value="50" max="100" low="100" high="66" optimum="0"></meter>
+		<meter class="pet-stat-bar" value="50" max="100" low="33" high="66" optimum="0"></meter>
 		<br />
 
 		Fatigue: <span class="pet-stat-number">75</span>
-		<meter class="pet-stat-bar" value="75" max="100" low="66" high="33" optimum="0"></meter>
+		<meter class="pet-stat-bar" value="75" max="100" low="33" high="66" optimum="0"></meter>
 		<br />
 
 		Age: <span class="pet-stat-number">25</span>
-		<meter class="pet-stat-bar" value="25" max="100" low="66" high="33" optimum="0"></meter>
+		<meter class="pet-stat-bar" value="25" max="100" low="33" high="66" optimum="0"></meter>
 		<br /><br />
 
 		<button class="pet-action-button">Feed</button>
