--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 		}
 	</style>
 	<link href="client/assets/css/cards.css" rel="stylesheet" />
+	<script src="/client/assets/js/Pet.js"></script>
 	<meta name="viewport" content="width=device-width, height=device-height" />
 </head>
 
