restructuring images directory

--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,8 @@
 	<meta name="viewport" content="width=device-width, height=device-height" />
 	<script>
 		function onload() {
-			pet = new Pet("Meow", "Drupper", Pet.prototype.initialValues.health, Pet.prototype.initialValues.spirit, Pet.prototype.initialValues.hunger, Pet.prototype.initialValues.fatigue, Pet.prototype.initialValues.age, 0, 0, null, Pet.prototype.initialValues.maxHealth);
-			pet2 = new Pet("Purr", "Drupper", 75, 25, 25, 50, 75, 0, 0, 1, Pet.prototype.initialValues.maxHealth);
+			pet = new Pet("Meow", "cat", Pet.prototype.initialValues.health, Pet.prototype.initialValues.spirit, Pet.prototype.initialValues.hunger, Pet.prototype.initialValues.fatigue, Pet.prototype.initialValues.age, 0, 0, null, Pet.prototype.initialValues.maxHealth);
+			pet2 = new Pet("Purr", "cat", 75, 25, 25, 50, 75, 0, 0, 1, Pet.prototype.initialValues.maxHealth);
 		}
 	</script>
 </head>
