prevent duplicate pets

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 	<span class="card">
 		<span class="card-title">Adopt a pet</span>
 		<br /><br />
-		<form>
+		<form method="POST">
 			<span class="card-input-label">Name: </span>
 			<input type="text" class="text-input" name="name" required />
 			<br /><br />
