downloading pets from the server

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height" />
 </head>
 
-<body>
+<body onload="downloadPets();">
 	<span class="card">
 		<span class="card-title">Adopt a pet</span>
 		<br /><br />
